Add logic for fetching CPU codenames from C3 and match against CPU ID list from client
