# server/hwapi/data_models/models.py
@@ -185,3 +185,9 @@ class Device(Base):
     reports = relationship(
         "Report", secondary=device_report_association, back_populates="devices"
     )
+
+
+class CpuId(Base):
+    __tablename__ = "cpu_id"
+    id_pattern: Mapped[str] = mapped_column(nullable=False, index=True)
+    codename: Mapped[str] = mapped_column(nullable=False)
